welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:7: error: not found: value setBrosseCouleur
	{setBrosseCouleur(c)
         ^PatternPicture:33: error: not found: value sqaure
	sqaure(c4)
        ^